--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,9 +56,10 @@
     <Analyzer Include="E:\Program Files\Microsoft\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scenes\vector_gizmo.cs" />
-    <Compile Include="Assets\Scenes\sphere_line_gizmo.cs" />
+    <Compile Include="Assets\Scenes\vectors_and_dot_products\scripts\vector_gizmo.cs" />
+    <Compile Include="Assets\Scenes\vectors_and_dot_products\scripts\sphere_line_gizmo.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Scenes\vectors_and_dot_products\scripts\line_segment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
